tests/baselines/reference/computedPropertyNames36_ES5(strict=true).errors.txt
computedPropertyNames36_ES5.ts(1,13): error TS7008: Member 'x' implicitly has an 'any' type.
computedPropertyNames36_ES5.ts(2,14): error TS7008: Member 'x' implicitly has an 'any' type.
computedPropertyNames36_ES5.ts(2,17): error TS7008: Member 'y' implicitly has an 'any' type.
computedPropertyNames36_ES5.ts(8,9): error TS2411: Property '["get1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.


==== computedPropertyNames36_ES5.ts (4 errors) ====
    class Foo { x }
                ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    class Foo2 { x; y }
                 ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
                    ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    
    class C {
        [s: string]: Foo2;
    
        // Computed properties
        get ["get1"]() { return new Foo }
            ~~~~~~~~
!!! error TS2411: Property '["get1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.
        set ["set1"](p: Foo2) { }
    }